   buffer_len will be hit much earlier than it used to be. Use ansi()
   with wisdom! [GM]
 * @edit no longer shows the full value of attributes which aren't edited,
   it just shows that they are unchanged. Suggested by Minion. [MG]
 * @mail now shows the dbref of the sender for mail from non-players.
   Suggested by Minion. [MG]
 * Fix a potential buffer overflow in prefix table code. [SW]

Fixes:
 * No_Pay was implicit if executor is #1, but was _not_ implicit if 
   Owner(executor) was #1. Caused some obscure queue cost bugs.
   Discovered by Padraic@M*U*S*H. [GM]
 * %$-subs didn't work inside @switch's default case. Patch by Covenent.
 * %0-9 were being overridden when using /inline/localize. Patch by Covenent.
 * You couldn't @chat on open channels. Reported by Padraic. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
 * regrab*() functions removed ansi. Reported by Covenent. [MG]
 * munge() didn't play nice with ansi. [MG]
 * @shutdown/reboot would cause hang unencrypted sockets for players with
   both SSL and normal connections. Reported by Padraic. [SW]
 * @chatformat sometimes received the player's name without accents by
   mistake. Reported by Sketch. [MG]
 * Bug in @wipe fixed by Padraic.

Functions:
 * Restrictions for the beep() function can now be modified with @function.
   Suggested by Paige. [MG]
 * Functions that take #lambda anonymous attributes also understand a new
   #apply/<function name> shorthand for calling a single function. [SW]

Version 1.8.4 patchlevel 4                                 May 05,  2011

Major changes:
 * Q-registers are no longer limited to single characters. setq(name,joe)
   and r(name) or %q<name>! Limited by max_named_qregs. [GM]
 * Ident lookup and associated config options have been removed. Between
   lack of people running ident servers, NAT, and issues in the code, it
   rarely got results. [SW].

Hardcode: